maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:10: error: type mismatch;
 found   : (Int, Int)
 required: Int
    avance(sortie) 
           ^